Fix people alignment for mobile screens.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -68,7 +68,7 @@ hr {
 
 @media (max-width: 800px) {
     .container {
-        max-width: $med-width;
+        max-width: 100%;
         transition: 0.3s ease all;
     }
 }
