--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -21,11 +21,3 @@ $people-fs: 17px;
 $anchor-color: orangered;
 $text-color: black;
 $title-color: black;
-
-/*
- * Build Variables, don't touch
- */
-
-$max-width: 1000px;
-$med-width: 700px;
-$small-width: 500px;
